--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="static/favi/apple-icon-57x57.png">
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="static/favi/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="static/favi/apple-icon-60x60.png]">
     <link rel="apple-touch-icon" sizes="72x72" href="static/favi/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="static/favi/apple-icon-76x76.png">
@@ -27,7 +27,11 @@
     <link rel="manifest" href="static/favi/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/static/favi/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
       
 
      <!--styles -->
