--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,10 +28,10 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/static/favi/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff"> -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favi/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favi/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favi/favicon-16x16.png">
+    <link rel="manifest" href="static/favi/site.webmanifest">
       
 
      <!--styles -->
